# lab-playwright-expert

./: .dockerignore  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CHECKPOINT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.secure  IDENTITY.md  Makefile  PROJECT.md  PROJECT_INDEX.md  README.md  REVIEW.md  SESSION_HANDOFF.md  SPECS.md  docker-compose.secure.yml  docker-compose.yml  git-authors.json  pyproject.toml  requirements.txt  scrapy.cfg
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml  (+1 more)
benchmark_reports/: benchmark_data.json  benchmark_report.html
config/: alerts.yml  monitor.yaml  nginx-ssl.conf  prometheus.yml  screenshot-healthcheck.service  screenshot-healthcheck.timer  screenshot-service.service  security-audit.service  security-audit.timer  vpn_proxies.yaml
docs/: ADR-005-lab-playwright-expert.md  API.md  API_DISCOVERY_REPORT.md  ARCHITECTURE.md  DEPLOY.md  GETTING_STARTED.md  GUIDES.md  PARSING_INTEGRATION.md  PARSING_REGISTRY.md  PERFORMANCE.md  SCRIPTS.md  api-research-exist-ru.md  api-research-summary.md  openapi.json
scripts/: alert_manager.py  antidetection_lab.py  autodoc_api.py  autodoc_dump.py  autodoc_reg.py  crosspost.py  crosspost_secure.py  data_api.py  diagnose_auth.py  distributed_crawler.py  export_openapi.py  extract_selectors.py  geo_check.py  ghost_protocol.py  ghost_protocol_v2.py  health_check.sh  health_monitor.py  hype_pilot_integration.py  llm_browser_agent.py  monitor_daemon.py  monitor_saas.sh  parsing_cron.sh  performance_benchmark.py  screenshot_service.py  screenshot_service_secure.py  secret_manager.py  security_audit.py  setup_monitoring.sh  setup_security.sh  site_monitor.py  stealth_benchmark_suite.py  stealth_research.py  stealth_tracker.py  telegram_dashboard.py  tg_admin_bot.py
tests/: battle_auto_parts.py  battle_auto_parts_v2.py  battle_auto_parts_v3.py  battle_debug.py  conftest.py  test_account_finder.py  test_account_finder_extended.py  test_account_manager.py  test_account_manager_extended.py  test_action_engine.py  test_action_engine_extended.py  test_antidetection_lab.py  test_aria_snapshot.py  test_aria_snapshot_extended.py  test_auto_parts_spider.py  test_avito_dealer_spider.py  test_browser.py  test_browser_auth.py  test_browser_auth_extended.py  test_browser_extended.py  test_captcha_solver.py  test_captcha_solver_extended.py  test_clock.py  test_clock_extended.py  test_cloudflare_bypass.py  test_cloudflare_bypass_extended.py  test_data_api.py  test_data_parser.py  test_data_parser_extended.py  test_distributed_crawler.py  test_e2e_cloakbrowser.py  test_fingerprint.py  test_fingerprint_auditor.py  test_fingerprint_auditor_extended.py  test_fingerprint_extended.py  test_generic_spider.py  test_geo_check.py  test_geo_checker_extended.py  test_ghost_protocol.py  test_har_recorder.py  (+76 more)
(+82 files in other folders)
